--- a/handmaids/src/App.css
+++ b/handmaids/src/App.css
@@ -6,6 +6,8 @@
   animation: App-logo-spin infinite 20s linear;
   height: 30vmin;
   pointer-events: none;
+  border: 4px solid black;
+  border-radius: 5px;
 }
 
 .App-header {
@@ -19,9 +21,7 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+
 
 @keyframes App-logo-spin {
   from {
